--- a/Pages/Projects.razor
+++ b/Pages/Projects.razor
@@ -24,55 +24,57 @@ else
                     </li>
                 }
             </ul>
-            <p>
-                <button class="btn btn-primary"
-                        @onclick="AddNewProject">
-                    Add New Project
-                </button>
-                @if (ShowPopup)
-                {
-                    <!-- This is the popup to create a project -->
-                    <div class="modal" tabindex="-1" style="display:block" role="dialog">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h3 class="modal-title">Add new Project</h3>
-                                    <!-- Button to close the popup -->
-                                    <button type="button" class="close"
-                                            @onclick="ClosePopup">
-                                        <span aria-hidden="true">X</span>
-                                    </button>
-                                </div>
-                                <!-- Form to add a new project -->
-                                <div class="modal-body">
-                                    <input class="form-control" type="text"
-                                           placeholder="Project Title"
-                                           @bind="project.Title" />
+            <AuthorizeView Roles="ADMIN,MENTOR">
+                <p>
+                    <button class="btn btn-primary"
+                            @onclick="AddNewProject">
+                        Add New Project
+                    </button>
+                    @if (ShowPopup)
+                    {
+                        <!-- This is the popup to create a project -->
+                        <div class="modal" tabindex="-1" style="display:block" role="dialog">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h3 class="modal-title">Add new Project</h3>
+                                        <!-- Button to close the popup -->
+                                        <button type="button" class="close"
+                                                @onclick="ClosePopup">
+                                            <span aria-hidden="true">X</span>
+                                        </button>
+                                    </div>
+                                    <!-- Form to add a new project -->
+                                    <div class="modal-body">
+                                        <input class="form-control" type="text"
+                                               placeholder="Project Title"
+                                               @bind="project.Title" />
 
-                                    <input class="form-control" type="text"
-                                           placeholder="Project Description"
-                                           @bind="project.Description" />
+                                        <input class="form-control" type="text"
+                                               placeholder="Project Description"
+                                               @bind="project.Description" />
 
-                                    <input class="form-control" type="text"
-                                           placeholder="Project Short Description"
-                                           @bind="project.DescriptionPreview" />
+                                        <input class="form-control" type="text"
+                                               placeholder="Project Short Description"
+                                               @bind="project.DescriptionPreview" />
 
-                                    <input class="form-control" type="datetime"
-                                           placeholder="Project Deadline"
-                                           @bind="project.DeadLine" />
+                                        <input class="form-control" type="date"
+                                               placeholder="Project Deadline"
+                                               @bind="project.DeadLine" />
 
-                                    <br />
-                                    <!-- Button to save the project -->
-                                    <button class="btn btn-primary"
-                                            @onclick="SaveProject">
-                                        Save
-                                    </button>
+                                        <br />
+                                        <!-- Button to save the project -->
+                                        <button class="btn btn-primary"
+                                                @onclick="SaveProject">
+                                            Save
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                }
-            </p>
+                    }
+                </p>
+                </AuthorizeView>
         </div>
         <div class="project-second-column">
             <Siemens.MP.Pages.Components.DetailedProjectComponent @bind-IdProject="ProjectID"></Siemens.MP.Pages.Components.DetailedProjectComponent>
