--- a/Pages/KnowledgeDatabase.razor
+++ b/Pages/KnowledgeDatabase.razor
@@ -4,15 +4,10 @@
 @using Microsoft.AspNetCore.Identity;
 @inject UserManager<IdentityUser> UserManager;
 @inject Siemens.MP.Data.Repositories.GenericRepository<Siemens.MP.Entities.Article> ArticleRepository
-
+@using Siemens.MP.Enums
 
 <link rel="stylesheet" href="/css/knowledge.css">
-@if (articles == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
+
     <div class="modal-body row ">
 
         <div class="col-md-2 border-right border-dark toronto-content">
@@ -20,42 +15,38 @@ else
             <h2>Categories</h2>
 
             <ol class="list-group list-group-flush">
-                @for (int i = 0; i < 5; i++)
+                @foreach (ArticleCategory category in Enum.GetValues(typeof(ArticleCategory)))
                 {
-                    <li class="list-group-item border-top ">
-                        <h5> <a href="#">Language C#</a></h5>
+                    <li class="list-group-item border-top " @onclick="@(() => ChangeTheCategory(category))">
+                        <h5>@MakeEnumPretty(category)</h5>
                     </li>
                 }
             </ol>
         </div>
 
+        <Siemens.MP.Pages.Components.KnowledgeDbArticlesListComponent @bind-articleCategory="articleCategory"></Siemens.MP.Pages.Components.KnowledgeDbArticlesListComponent>
 
-        <div class="col-md-10">
-            @foreach (var article in articles)
-            {
-            <div class="article">
-                <h4 class="mb-0">
-                    <a class="text-dark">@article.Title</a>
-                </h4>
-                <div class="mb-1 text-muted">@article.CreatedBy.UserName.Split('@').First()</div>
-                <p class="mb-auto">@article.Text</p>
-                <p class="mb-auto">@article.ArticleCategory</p>
-            </div>
-            }
-        </div>
 
         <div class="align-self-end ml-auto">
             <button type="button" class="btn btn-primary" onclick="location.href='addarticle'">Add article</button>
         </div>
     </div>
-}
+
+
 
 @code {
-    private List<Siemens.MP.Entities.Article> articles;
 
-    protected override async System.Threading.Tasks.Task OnInitializedAsync()
+    [Parameter]
+    public ArticleCategory articleCategory { get; set; }
+
+    private string MakeEnumPretty(ArticleCategory category)
     {
-        articles = await ArticleRepository.GetAll();
+        string categoryString = category.ToString().ToLower().Replace('_', ' ');
+        return categoryString.Remove(1).ToUpper() + categoryString.Substring(1);
+    }
+    public void ChangeTheCategory(ArticleCategory category)
+    {
+        articleCategory = category;
     }
 
 }
