Added function to update and delete a project by admin or mentor

--- a/Pages/Components/ProjectTasksComponent.razor
+++ b/Pages/Components/ProjectTasksComponent.razor
@@ -2,7 +2,7 @@
 @inject Siemens.MP.Data.Repositories.GenericRepository<Siemens.MP.Entities.Task> TaskRepository
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
 
-<div class="row">
+<div class="row" style=" margin-top:5%">
     <div class="taskcolumn">
         <div class="taskcard">
             <h4>To do tasks</h4>
