--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -215,21 +215,20 @@ app {
 .issue-link-summary {
     display: block;
     height: 47px;
-    overflow-y: hidden;
+    overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .issue-content-container {
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
-    display: inline-block;
     border: 1px solid #CCC;
     box-shadow: 0 0 5px -1px rgba(0,0,0,0.2);
     cursor: pointer;
     vertical-align: middle;
     padding: 5px;
     width:100%;
+    height:14%;
     
 }
 
@@ -242,24 +241,12 @@ app {
         background-color: #f1f1f1;
     }
 
-    #projlist li:focus {
-        background-color: red;
-    }
-
-    #projlist li a{
-        display: block;
-    }
-
-        #projlist li a:active {
-            background-color: aqua;
-        }
-
 
 .project-first-column {
     width: 20%;
     float: left;
     border-right: groove;
-    height: 650px;
+    height: 700px;
     overflow-y: scroll;
 }
 
